--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="index.css">
+</head>
+
 <div className="App">
       <div className="App-header">
         <img src={first} style={{ width: 120, paddingRight: "20px" }} />
