--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 
 <div className="App">
       <div className="App-header">
-        <img src={first} style={{ width: 120, paddingRight: "20px" }} />
+        <img src="one.png" style={{ width: 120, paddingRight: "20px" }} />
         <h1>Hey Disha!</h1>
-        <img src={second} style={{ width: 120, paddingLeft: "20px" }} />
+        <img src="second.png" style={{ width: 120, paddingLeft: "20px" }} />
       </div>
       <div className="App-middle">
-        <img src={third} style={{ width: 120, paddingLeft: "20px" }} />
+        <img src="third.png" style={{ width: 120, paddingLeft: "20px" }} />
         <h2>Do you have Wi-fi?</h2>
         <h2>Because I'm feeling our connection :)</h2>
-        <img src={fourth} style={{ width: 120, paddingLeft: "20px" }} />
+        <img src="fourth.png" style={{ width: 120, paddingLeft: "20px" }} />
       </div>
       <div className="App-bottom">
         <h1 style={{paddingLeft: "120px"}}>Prom?</h1>
-        <img src={fifth} style={{ width: 120, paddingLeft: "20px" }} />
+        <img src="fifth.jpg" style={{ width: 120, paddingLeft: "20px" }} />
       </div>
     </div>
