--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <link rel="stylesheet" href="index.css">
 </head>
 
-<div className="App">
-      <div className="App-header">
+<div class="App">
+      <div class="App-header">
         <img src="one.png" style="width:120px;paddingRight:20px"/>
         <h1>Hey Disha!</h1>
         <img src="second.png" style="width:120px;paddingRight:20px"/>
       </div>
-      <div className="App-middle">
+      <div class="App-middle">
         <img src="third.png" style="width:120px;paddingRight:20px" />
         <h2>Do you have Wi-fi?</h2>
         <h2>Because I'm feeling our connection :)</h2>
         <img src="fourth.png" style="width:120px;paddingRight:20px" />
       </div>
-      <div className="App-bottom">
+      <div class="App-bottom">
         <h1 style={{paddingLeft: "120px"}}>Prom?</h1>
         <img src="fifth.jpg" style="width:120px;paddingRight:20px" />
       </div>
